fix pic spacing

--- a/pages/page.module.css
+++ b/pages/page.module.css
@@ -27,8 +27,8 @@
 }
 
 .heroText {
-  width: 49.167vw;
+  width: 708px;
   position: absolute;
-  left: 40vw;
+  right: 10vw;
   top: 40vh;
 }
